Fixes some accessibility with icon-only links by adding more descriptive text for screen readers; also updates some docs for lists.

--- a/static/css/post.less
+++ b/static/css/post.less
@@ -31,25 +31,25 @@
                     <li class="horizontal-list_item">
                         <a href="#">
                             <i class="cf-icon cf-icon-email-social-square"></i>
-                            <span class="visually-hidden">Email</span>
+                            <span class="visually-hidden">Share by email</span>
                         </a>
                     </li>
                     <li class="horizontal-list_item">
                         <a href="#">
                             <i class="cf-icon cf-icon-facebook-square"></i>
-                            <span class="visually-hidden">Facebook</span>
+                            <span class="visually-hidden">Share on Facebook</span>
                         </a>
                     </li>
                     <li class="horizontal-list_item">
                         <a href="#">
                             <i class="cf-icon cf-icon-twitter-square"></i>
-                            <span class="visually-hidden">Twitter</span>
+                            <span class="visually-hidden">Share on Twitter</span>
                         </a>
                     </li>
                     <li class="horizontal-list_item">
                         <a href="#">
                             <i class="cf-icon cf-icon-linkedin-square"></i>
-                            <span class="visually-hidden">LinkedIn</span>
+                            <span class="visually-hidden">Share on LinkedIn</span>
                         </a>
                     </li>
                 </ul>
