--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -13,7 +13,7 @@
         <h1>
             <a href="#">
                 <i class="cf-icon cf-icon-twitter-square"></i>
-                <span class="visually-hidden">Email</span>
+                <span class="visually-hidden">Share by email</span>
             </a>
         </h1>
       notes:
