--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -3746,7 +3746,7 @@ img {
         <h1>
             <a href="#">
                 <i class="cf-icon cf-icon-twitter-square"></i>
-                <span class="visually-hidden">Email</span>
+                <span class="visually-hidden">Share by email</span>
             </a>
         </h1>
       notes:
@@ -4181,18 +4181,24 @@ img {
       markup: |
         <ul class="horizontal-list">
             <li class="horizontal-list_item">
-                <i class="cf-icon cf-icon-email-social-square"></i>
+                <a href="#">List item 1</a>
             </li>
             <li class="horizontal-list_item">
-                <i class="cf-icon cf-icon-facebook-square"></i>
+                <a href="#">List item 2</a>
             </li>
             <li class="horizontal-list_item">
-                <i class="cf-icon cf-icon-twitter-square"></i>
+                <a href="#">List item 3</a>
             </li>
             <li class="horizontal-list_item">
-                <i class="cf-icon cf-icon-linkedin-square"></i>
+                <a href="#">List item 4</a>
             </li>
         </ul>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .horizontal-list
+            .horizontal-list_item
   tags:
     - cfgov-misc
 */
@@ -4223,29 +4229,53 @@ img {
             <li class="horizontal-list_item">
                 <a href="#">
                     <i class="cf-icon cf-icon-email-social-square"></i>
+                    <span class="visually-hidden">
+                        Share by email
+                    </span>
                 </a>
             </li>
             <li class="horizontal-list_item">
                 <a href="#">
                     <i class="cf-icon cf-icon-facebook-square"></i>
+                    <span class="visually-hidden">
+                        Share on Facebook
+                    </span>
                 </a>
             </li>
             <li class="horizontal-list_item">
                 <a href="#">
                     <i class="cf-icon cf-icon-twitter-square"></i>
+                    <span class="visually-hidden">
+                        Share on Twitter
+                    </span>
                 </a>
             </li>
             <li class="horizontal-list_item">
                 <a href="#">
                     <i class="cf-icon cf-icon-linkedin-square"></i>
+                    <span class="visually-hidden">
+                        Share on LinkedIn
+                    </span>
                 </a>
             </li>
         </ul>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .horizontal-list.horizontal-list__share
+            .horizontal-list_item
+              a
+                .cf-icon
+                .visually-hidden (accessible text goes here)
+      notes:
+        - "Text for screenreaders is added with the .visually-hidden element."
   tags:
     - cfgov-misc
 */
 
 .horizontal-list__share .horizontal-list_item {
+  font-size: 1.625em;
   line-height: 1;
 }
 
@@ -4253,7 +4283,6 @@ img {
   color: #101820;
   border-bottom-width: 0;
   color: #43484e;
-  font-size: 1.625em;
 }
 
 .horizontal-list__share .horizontal-list_item a:visited,
@@ -4407,25 +4436,25 @@ img {
                     <li class="horizontal-list_item">
                         <a href="#">
                             <i class="cf-icon cf-icon-email-social-square"></i>
-                            <span class="visually-hidden">Email</span>
+                            <span class="visually-hidden">Share by email</span>
                         </a>
                     </li>
                     <li class="horizontal-list_item">
                         <a href="#">
                             <i class="cf-icon cf-icon-facebook-square"></i>
-                            <span class="visually-hidden">Facebook</span>
+                            <span class="visually-hidden">Share on Facebook</span>
                         </a>
                     </li>
                     <li class="horizontal-list_item">
                         <a href="#">
                             <i class="cf-icon cf-icon-twitter-square"></i>
-                            <span class="visually-hidden">Twitter</span>
+                            <span class="visually-hidden">Share on Twitter</span>
                         </a>
                     </li>
                     <li class="horizontal-list_item">
                         <a href="#">
                             <i class="cf-icon cf-icon-linkedin-square"></i>
-                            <span class="visually-hidden">LinkedIn</span>
+                            <span class="visually-hidden">Share on LinkedIn</span>
                         </a>
                     </li>
                 </ul>
