--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -53,7 +53,7 @@
     - codenotes:
         - .u-inline-block();
       notes:
-        - "Adds a .lt-ie8 class to hack inline-block for IE 7 and below."
+        - "Also adds a .lt-ie8 class to hack inline-block for IE 7 and below."
   tags:
     - cfgov-utilities
 */
