--- a/static/css/summary.less
+++ b/static/css/summary.less
@@ -32,9 +32,9 @@
 
     &_header {
         .h3();
-        @media @respond-to-m-min {
+        .u-respond-to-min(600px, {
             .h2();
-        }
+        });
     }
 
     &_text {
