--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -3822,50 +3822,65 @@ img {
 
 /* ==========================================================================
    cfgov-refresh
-   vars
+   media-queries
    ========================================================================== */
 
 /* topdoc
-  name: Media query vars
-  family: cfgov-vars
+  name: Media query mixins
+  family: cfgov-media-queries
   patterns:
-    - name: Size calculations
-      notes:
-        - "You shouldn't need to use these variables directly,
-          they're used to create the @respond-to vars which you should use instead."
+    - name: "min-width/max-width media queries"
       codenotes:
-        - "@small-screens-min"
-        - "@small-screens-max"
-        - "@medium-screens-min"
-        - "@medium-screens-max"
-        - "@large-screens-min"
-        - "@large-screens-max"
-        - "@extralarge-screens-min"
-    - name: Interpolated media type and expressions
-      codenotes:
-        - "@respond-to-small-screens-min"
-        - "@respond-to-small-screens-max"
-        - "@media @respond-to-m-min"
-        - "@respond-to-medium-screens-max"
-        - "@respond-to-large-screens-min"
-        - "@respond-to-large-screens-max"
-        - "@respond-to-extralarge-screens-min"
+        - ".u-respond-to-min(@bp, @rules)"
+        - ".u-respond-to-max(@bp, @rules)"
       notes:
-        - "Use these variables to easily target screen size ranges."
-    - name: "Usage"
+        - "@bp: the breakpoint size in pixels. It will get converted into em's."
+        - "@rules: a CSS or Less ruleset. Note that it can contain the full set
+          of Less features."
+    - name: "min-width/max-width media query usage"
       codenotes:
         - |
-            @media @respond-to-m-min {
-                ...
-            }
+            .u-respond-to-min(768px, {
+                .title {
+                    font-size: 2em;
+                }
+            });
 
             Compiles to:
 
             @media only all and (min-width: 48em) {
-                ...
+                .title {
+                    font-size: 2em;
+                }
+            }
+    - name: "min-width/max-width media query range"
+      codenotes:
+        - ".u-respond-to-range(@bp1, @bp2, @rules)"
+      notes:
+        - "@bp1: the min-width breakpoint size in pixels.
+          It will get converted into em's."
+        - "@bp2: the max-width breakpoint size in pixels.
+          It will get converted into em's."
+        - "@rules: a CSS or Less ruleset. Note that it can contain the full set
+          of Less features."
+    - name: "min-width/max-width media query range usage"
+      codenotes:
+        - |
+            .u-respond-to-range(320px, 768px, {
+                .title {
+                    font-size: 2em;
+                }
+            });
+
+            Compiles to:
+
+            @media only all and (min-width: 20em) and (max-width: 48em) {
+                .title {
+                    font-size: 2em;
+                }
             }
   tags:
-    - cfgov-vars
+    - cfgov-media-queries
 */
 
 /* topdoc
