--- a/static/css/main.less
+++ b/static/css/main.less
@@ -32,7 +32,7 @@ img {
    ========================================================================== */
 
 @import (less) "utilities.less";
-@import (less) "vars.less";
+@import (less) "media-queries.less";
 @import (less) "media-object.less";
 @import (less) "meta.less";
 @import (less) "misc.less";
