--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4103,7 +4103,7 @@ img {
   display: block;
   margin: 1em 0;
 }
-@media only all and (max-width: 18.6875em) {
+@media only all and (min-width: 25em) {
   .post_featured-img {
     margin: 1.875em 0;
   }
