--- a/static/css/post.less
+++ b/static/css/post.less
@@ -146,7 +146,7 @@
 .post_featured-img {
     display: block;
     margin: unit(16px / @base-font-size-px, em) 0;
-    .u-respond-to-max(299px, {
+    .u-respond-to-min(400px, {
         margin: unit(30px / @base-font-size-px, em) 0;
     });
 }
