Adds link utilities.

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -142,8 +142,8 @@
         line-height: 1;
 
         a {
-            .u-unstyled-link();
-            color: @darkgray;
+            .u-link__colors(@darkgray);
+            .u-link__hover-border();
         }
     }
 }
