--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,13 +12,10 @@
 html {
   font-family: sans-serif;
   /* 1 */
-
   -ms-text-size-adjust: 100%;
   /* 2 */
-
   -webkit-text-size-adjust: 100%;
   /* 2 */
-
 }
 /**
  * Remove default margin.
@@ -57,10 +54,8 @@ progress,
 video {
   display: inline-block;
   /* 1 */
-
   vertical-align: baseline;
   /* 2 */
-
 }
 /**
  * Prevent modern browsers from displaying `audio` without controls.
@@ -217,13 +212,10 @@ select,
 textarea {
   color: inherit;
   /* 1 */
-
   font: inherit;
   /* 2 */
-
   margin: 0;
   /* 3 */
-
 }
 /**
  * Address `overflow` set to `hidden` in IE 8/9/10/11.
@@ -254,10 +246,8 @@ input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
   /* 2 */
-
   cursor: pointer;
   /* 3 */
-
 }
 /**
  * Re-set default cursor for disabled elements.
@@ -294,10 +284,8 @@ input[type="radio"] {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   /* 1 */
-
   padding: 0;
   /* 2 */
-
 }
 /**
  * Fix the cursor style for Chrome's increment/decrement buttons. For certain
@@ -316,11 +304,9 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
-
   -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box;
   /* 2 */
-
   box-sizing: content-box;
 }
 /**
@@ -347,10 +333,8 @@ fieldset {
 legend {
   border: 0;
   /* 1 */
-
   padding: 0;
   /* 2 */
-
 }
 /**
  * Remove default vertical scrollbar in IE 8/9/10/11.
@@ -540,13 +524,10 @@ form {
 legend {
   border: 0;
   /* 1 */
-
   white-space: normal;
   /* 2 */
-
   *margin-left: -7px;
   /* 3 */
-
 }
 /*
  * Improves appearance and consistency in all browsers.
@@ -629,9 +610,9 @@ input[type="radio"] {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 0.6428571428571429em 1em;
+  padding: 0.64285714em 1em;
   border: 0;
-  border-radius: 0.2857142857142857em;
+  border-radius: 0.28571429em;
   margin: 0;
   vertical-align: middle;
   background-color: #0072ce;
@@ -662,7 +643,7 @@ input[type="radio"] {
   background-color: #33578e;
 }
 .btn + .btn {
-  margin-left: 0.42857142857142855em;
+  margin-left: 0.42857143em;
 }
 button.btn::-moz-focus-inner,
 input.btn::-moz-focus-inner {
@@ -674,8 +655,8 @@ input.btn::-moz-focus-inner {
 .lt-ie8 button.btn,
 .lt-ie8 input.btn {
   overflow: visible;
-  padding-top: 0.5142857142857143em;
-  padding-bottom: 0.5142857142857143em;
+  padding-top: 0.51428571em;
+  padding-bottom: 0.51428571em;
 }
 /* topdoc
     name: Secondary button
@@ -810,16 +791,16 @@ input.btn::-moz-focus-inner {
 .btn-super,
 .btn-super:link,
 .btn-super:visited {
-  padding: 0.8333333333333334em 1.6666666666666667em;
+  padding: 0.83333333em 1.66666667em;
   font-size: 1.125em;
 }
 .btn-super + .btn-super {
-  margin-left: 0.3333333333333333em;
+  margin-left: 0.33333333em;
 }
 .lt-ie8 button.btn-super,
 .lt-ie8 input.btn-super {
-  padding-top: 0.6666666666666666em;
-  padding-bottom: 0.6666666666666666em;
+  padding-top: 0.66666667em;
+  padding-bottom: 0.66666667em;
 }
 /* topdoc
     name: Button with icons
@@ -926,7 +907,7 @@ input.btn::-moz-focus-inner {
   border-bottom-right-radius: 0;
 }
 .btn-group .btn + .btn {
-  margin-left: -0.21428571428571427em;
+  margin-left: -0.21428571em;
 }
 .btn-group .btn + .btn:not(:last-child) {
   border-radius: 0;
@@ -936,7 +917,7 @@ input.btn::-moz-focus-inner {
   border-bottom-left-radius: 0;
 }
 .btn-group .btn-super + .btn-super {
-  margin-left: -0.16666666666666666em;
+  margin-left: -0.16666667em;
 }
 /* topdoc
     name: Compound button
@@ -998,8 +979,8 @@ input.btn::-moz-focus-inner {
   background-color: #75787b;
 }
 .btn-compound-action.btn-super {
-  padding-left: 1.2222222222222223em;
-  padding-right: 1.2222222222222223em;
+  padding-left: 1.22222222em;
+  padding-right: 1.22222222em;
 }
 /* topdoc
     name: Button link
@@ -1037,7 +1018,7 @@ input.btn::-moz-focus-inner {
   padding: 0;
   border-bottom: 1px dotted #0072ce;
   border-radius: 0;
-  margin: 0.6428571428571429em 0;
+  margin: 0.64285714em 0;
   background-color: transparent;
   color: #0072ce;
 }
@@ -1179,7 +1160,7 @@ input.btn::-moz-focus-inner {
   font-style: normal;
   font-weight: normal;
   font-size: 0.875em;
-  line-height: 1.5714285714285714;
+  line-height: 1.57142857;
 }
 .expandable-content {
   padding: 0 0.75em 0.25em;
@@ -2650,7 +2631,6 @@ textarea {
   margin: 0;
   padding: 0;
   /* Positions .pagination_next relative to this container */
-
   position: relative;
 }
 /* On small screens position .pagination_next to the right edge of .pagination */
@@ -2679,14 +2659,11 @@ textarea {
   display: inline-block;
   vertical-align: middle;
   /* We need enough room for three digits and the number spinners for type="number" inputs */
-
   width: 3em;
   /* Resets the padding back to 4px now that the font-size is 14px */
-
-  padding: 0.2857142857142857em;
-  margin: 0 0.2857142857142857em;
+  padding: 0.28571429em;
+  margin: 0 0.28571429em;
   /* Keep in mind that text inputs are 16px by default but 14px in .pagination to match the rest of the tex */
-
   font-size: 0.875em;
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
   font-style: normal;
@@ -2703,7 +2680,7 @@ textarea {
 }
 @media only screen and (min-width: 480px) {
   .pagination_form {
-    border-radius: 0.2857142857142857em;
+    border-radius: 0.28571429em;
   }
   .pagination_prev {
     position: absolute;
@@ -2899,30 +2876,30 @@ h6,
 }
 h1,
 .h1 {
-  margin-bottom: 0.47058823529411764em;
+  margin-bottom: 0.47058824em;
   font-size: 2.125em;
-  line-height: 1.2941176470588236;
+  line-height: 1.29411765;
 }
 h2,
 .h2 {
-  margin-bottom: 0.3076923076923077em;
+  margin-bottom: 0.30769231em;
   font-size: 1.625em;
-  line-height: 1.2692307692307692;
+  line-height: 1.26923077;
 }
 h3,
 .h3 {
-  margin-bottom: 0.22727272727272727em;
+  margin-bottom: 0.22727273em;
   font-size: 1.375em;
-  line-height: 1.2727272727272727;
+  line-height: 1.27272727;
 }
 h4,
 .h4 {
   font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
-  margin-bottom: 0.2777777777777778em;
+  margin-bottom: 0.27777778em;
   font-size: 1.125em;
-  line-height: 1.2222222222222223;
+  line-height: 1.22222222;
 }
 .lt-ie9 h4,
 .lt-ie9 .h4 {
@@ -2946,15 +2923,15 @@ h6,
 }
 h5,
 .h5 {
-  margin-bottom: 0.35714285714285715em;
+  margin-bottom: 0.35714286em;
   font-size: 0.875em;
-  line-height: 1.5714285714285714;
+  line-height: 1.57142857;
 }
 h6,
 .h6 {
-  margin-bottom: 0.4166666666666667em;
+  margin-bottom: 0.41666667em;
   font-size: 0.75em;
-  line-height: 1.8333333333333333;
+  line-height: 1.83333333;
 }
 .superheader {
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
@@ -3231,7 +3208,7 @@ ul {
 }
 .demo-placeholder {
   display: inline-block;
-  padding: 0.5714285714285714em 0.8571428571428571em;
+  padding: 0.57142857em 0.85714286em;
   margin: 3em 0;
   color: #75787b;
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
@@ -3346,13 +3323,63 @@ img {
         - "2. Simply change the markup order so that the element floating right
           comes before the element to its left."
     - codenotes:
-        - .u-unstyled-link();
-    - codenotes:
         - .u-flexible-image();
     - codenotes:
         - .u-inline-block();
       notes:
         - "Also adds a .lt-ie8 class to hack inline-block for IE 7 and below."
+  tags:
+    - cfgov-utilities
+*/
+/* topdoc
+  name: Link mixins
+  family: cfgov-utilities
+  patterns:
+    - codenotes:
+        - .u-link__colors();
+      notes:
+        - "Pass this mixin no arguments and it will color your link with the
+          default colors of link: pacific, hover: pacific-50, visited: teal,
+          active: navy."
+    - codenotes:
+        - .u-link__colors(@c);
+      notes:
+        - "Pass this mixin one color it will be used on all states of your link."
+    - codenotes:
+        - .u-link__colors(@c, @h);
+      notes:
+        - "Pass this mixin two colors it will use the first color for the :link
+          and :visited states, and the second color for the :hover and :active
+          states."
+    - codenotes:
+        - .u-link__colors(@c, @h, @v, @a);
+      notes:
+        - "Pass this mixin four colors to color :link, :hover, :visited, :active
+          states respectively."
+        - "Note that this is basically the same as using the .u-link() mixin
+          except that it allows you to stick with the same mixin naming
+          convention for consistency."
+    - codenotes:
+        - .u-link(@c, @h, @v, @a);
+      notes:
+        - "This is the base mixin that all .u-link__colors() mixins use. Please
+          refrain from using this mixin directly in order to promote a
+          consistent use of mixin names fro coloring links throughout this
+          project. Remember that if you need to set colors for all states of a
+          link you should use .u-link__colors(@c, @h, @v, @a)."
+    - codenotes:
+        - .u-link__border();
+      notes:
+        - "Forces the default bottom border on the :link and :hover states."
+    - codenotes:
+        - .u-link__no-border();
+      notes:
+        - "Turn off the default bottom border on the :link and :hover states."
+    - codenotes:
+        - .u-link__hover-border();
+      notes:
+        - "Turn off the default bottom border on the :link state and force a
+          bottom border on the :hover state."
   tags:
     - cfgov-utilities
 */
@@ -3501,9 +3528,9 @@ img {
   font-weight: bold;
   letter-spacing: 1px;
   text-transform: uppercase;
-  margin-bottom: 0.35714285714285715em;
+  margin-bottom: 0.35714286em;
   font-size: 0.875em;
-  line-height: 1.5714285714285714;
+  line-height: 1.57142857;
   color: #75787b;
   white-space: nowrap;
 }
@@ -3532,38 +3559,33 @@ img {
   font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
-  margin-bottom: 0.2777777777777778em;
+  margin-bottom: 0.27777778em;
   font-size: 1.125em;
-  line-height: 1.2222222222222223;
+  line-height: 1.22222222;
   color: #101820;
-  border-bottom-width: 0;
+  border-bottom-color: #101820;
+  border-bottom-width: 0 !important;
 }
 .lt-ie9 .category-slug {
   font-weight: normal !important;
 }
 .category-slug:visited,
 .category-slug.visited {
+  color: #101820;
+}
+.category-slug:hover,
+.category-slug.hover {
+  border-bottom-color: #101820;
+  color: #101820;
+}
+.category-slug:active,
+.category-slug.active {
   border-bottom-color: #101820;
   color: #101820;
 }
 .category-slug:hover,
 .category-slug.hover {
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: #101820;
-  color: #101820;
-}
-.category-slug:focus,
-.category-slug.focus {
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-}
-.category-slug:active,
-.category-slug.active {
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: #101820;
-  color: #101820;
+  border-bottom-width: 1px !important;
 }
 /* topdoc
   name: Header slug
@@ -3594,10 +3616,10 @@ img {
   font-weight: bold;
   letter-spacing: 1px;
   text-transform: uppercase;
-  margin-bottom: 0.35714285714285715em;
+  margin-bottom: 0.35714286em;
   font-size: 0.875em;
-  line-height: 1.5714285714285714;
-  margin-bottom: 1.2142857142857142em;
+  line-height: 1.57142857;
+  margin-bottom: 1.21428571em;
   border-top: 1px solid #e3e4e5;
 }
 .lt-ie9 .header-slug {
@@ -3605,7 +3627,7 @@ img {
 }
 .header-slug_inner {
   display: inline-block;
-  padding-top: 0.2857142857142857em;
+  padding-top: 0.28571429em;
   margin-top: -3px;
   border-top: 5px solid #2cb34a;
 }
@@ -3808,33 +3830,27 @@ img {
   line-height: 1;
 }
 .horizontal-list__share .horizontal-list_item a {
-  color: #101820;
-  border-bottom-width: 0;
   color: #43484e;
+  border-bottom-color: #43484e;
+  border-bottom-width: 0 !important;
 }
 .horizontal-list__share .horizontal-list_item a:visited,
 .horizontal-list__share .horizontal-list_item a.visited {
-  border-bottom-color: #101820;
-  color: #101820;
+  color: #43484e;
 }
 .horizontal-list__share .horizontal-list_item a:hover,
 .horizontal-list__share .horizontal-list_item a.hover {
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: #101820;
-  color: #101820;
-}
-.horizontal-list__share .horizontal-list_item a:focus,
-.horizontal-list__share .horizontal-list_item a.focus {
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
+  border-bottom-color: #43484e;
+  color: #43484e;
 }
 .horizontal-list__share .horizontal-list_item a:active,
 .horizontal-list__share .horizontal-list_item a.active {
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: #101820;
-  color: #101820;
+  border-bottom-color: #43484e;
+  color: #43484e;
+}
+.horizontal-list__share .horizontal-list_item a:hover,
+.horizontal-list__share .horizontal-list_item a.hover {
+  border-bottom-width: 1px !important;
 }
 /* topdoc
   name: Line container
@@ -4054,9 +4070,9 @@ img {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
-  margin-bottom: 0.3076923076923077em;
+  margin-bottom: 0.30769231em;
   font-size: 1.625em;
-  line-height: 1.2692307692307692;
+  line-height: 1.26923077;
 }
 @media only all and (min-width: 37.5em) {
   .post_header {
@@ -4064,9 +4080,9 @@ img {
     font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
-    margin-bottom: 0.47058823529411764em;
+    margin-bottom: 0.47058824em;
     font-size: 2.125em;
-    line-height: 1.2941176470588236;
+    line-height: 1.29411765;
   }
 }
 .post_meta {
@@ -4079,9 +4095,9 @@ img {
   font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
-  margin-bottom: 0.2777777777777778em;
+  margin-bottom: 0.27777778em;
   font-size: 1.125em;
-  line-height: 1.2222222222222223;
+  line-height: 1.22222222;
 }
 .lt-ie9 .post_byline {
   font-weight: normal !important;
@@ -4100,9 +4116,9 @@ img {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
-  margin-bottom: 0.22727272727272727em;
+  margin-bottom: 0.22727273em;
   font-size: 1.375em;
-  line-height: 1.2727272727272727;
+  line-height: 1.27272727;
 }
 .post_body {
   color: #43484e;
@@ -4143,9 +4159,9 @@ img {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
-  margin-bottom: 0.22727272727272727em;
+  margin-bottom: 0.22727273em;
   font-size: 1.375em;
-  line-height: 1.2727272727272727;
+  line-height: 1.27272727;
 }
 @media only all and (min-width: 37.5em) {
   .summary_header {
@@ -4153,9 +4169,9 @@ img {
     font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
-    margin-bottom: 0.3076923076923077em;
+    margin-bottom: 0.30769231em;
     font-size: 1.625em;
-    line-height: 1.2692307692307692;
+    line-height: 1.26923077;
   }
 }
 .summary_text {
@@ -4369,7 +4385,7 @@ img {
     border-width: 0 15px;
     margin-right: -0.25em;
     vertical-align: top;
-    width: 66.66666666666666%;
+    width: 66.66666667%;
   }
   .ie .content__2-1 .content_main {
     margin-right: -0.26em;
@@ -4388,7 +4404,7 @@ img {
     border-width: 0 15px;
     margin-right: -0.25em;
     vertical-align: top;
-    width: 33.33333333333333%;
+    width: 33.33333333%;
   }
   .ie .content__2-1 .content_sidebar {
     margin-right: -0.26em;
