--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -47,8 +47,6 @@
         - "2. Simply change the markup order so that the element floating right
           comes before the element to its left."
     - codenotes:
-        - .u-unstyled-link();
-    - codenotes:
         - .u-flexible-image();
     - codenotes:
         - .u-inline-block();
@@ -62,44 +60,125 @@
     float: right;
 }
 
-.u-unstyled-link() {
-    color: @black;
-    border-bottom-width: 0;
-
-    &:visited,
-    &.visited {
-        border-bottom-color: @black;
-        color: @black;
-    }
-
-    &:hover,
-    &.hover {
-        border-bottom-width: 1px;
-        border-bottom-style: solid;
-        border-bottom-color: @black;
-        color: @black;
-    }
-
-    &:focus,
-    &.focus {
-        border-bottom-width: 1px;
-        border-bottom-style: solid;
-    }
-
-    &:active,
-    &.active {
-        border-bottom-width: 1px;
-        border-bottom-style: solid;
-        border-bottom-color: @black;
-        color: @black;
-    }
-}
-
 .u-inline-block() {
     display: inline-block;
     .lt-ie8 & {
         // Hack inline-block into submission
         display: inline;
+    }
+}
+
+
+/* topdoc
+  name: Link mixins
+  family: cfgov-utilities
+  patterns:
+    - codenotes:
+        - .u-link__colors();
+      notes:
+        - "Pass this mixin no arguments and it will color your link with the
+          default colors of link: pacific, hover: pacific-50, visited: teal,
+          active: navy."
+    - codenotes:
+        - .u-link__colors(@c);
+      notes:
+        - "Pass this mixin one color it will be used on all states of your link."
+    - codenotes:
+        - .u-link__colors(@c, @h);
+      notes:
+        - "Pass this mixin two colors it will use the first color for the :link
+          and :visited states, and the second color for the :hover and :active
+          states."
+    - codenotes:
+        - .u-link__colors(@c, @h, @v, @a);
+      notes:
+        - "Pass this mixin four colors to color :link, :hover, :visited, :active
+          states respectively."
+        - "Note that this is basically the same as using the .u-link() mixin
+          except that it allows you to stick with the same mixin naming
+          convention for consistency."
+    - codenotes:
+        - .u-link(@c, @h, @v, @a);
+      notes:
+        - "This is the base mixin that all .u-link__colors() mixins use. Please
+          refrain from using this mixin directly in order to promote a
+          consistent use of mixin names fro coloring links throughout this
+          project. Remember that if you need to set colors for all states of a
+          link you should use .u-link__colors(@c, @h, @v, @a)."
+    - codenotes:
+        - .u-link__border();
+      notes:
+        - "Forces the default bottom border on the :link and :hover states."
+    - codenotes:
+        - .u-link__no-border();
+      notes:
+        - "Turn off the default bottom border on the :link and :hover states."
+    - codenotes:
+        - .u-link__hover-border();
+      notes:
+        - "Turn off the default bottom border on the :link state and force a
+          bottom border on the :hover state."
+  tags:
+    - cfgov-utilities
+*/
+
+.u-link__colors() {
+    .u-link(@pacific, @pacific-50, @teal, @navy);
+}
+
+.u-link__colors(@c) {
+    .u-link(@c, @c, @c, @c);
+}
+
+.u-link__colors(@c, @h) {
+    .u-link(@c, @h, @c, @h);
+}
+
+.u-link__colors(@c, @h, @v, @a) {
+    .u-link(@c, @h, @v, @a);
+}
+
+.u-link__border() {
+    border-bottom-width: 1px;
+
+    &:hover,
+    &.hover {
+        border-bottom-width: 1px;
+    }
+}
+
+.u-link__no-border() {
+    border-bottom-width: 0 !important;
+}
+
+.u-link__hover-border() {
+    border-bottom-width: 0 !important;
+
+    &:hover,
+    &.hover {
+        border-bottom-width: 1px !important;
+    }
+}
+
+.u-link(@c, @h, @v, @a) {
+    color: @c;
+    border-bottom-color: @c;
+
+    &:visited,
+    &.visited {
+        color: @v;
+    }
+
+    &:hover,
+    &.hover {
+        border-bottom-color: @h;
+        color: @h;
+    }
+
+    &:active,
+    &.active {
+        border-bottom-color: @a;
+        color: @a;
     }
 }
 
