Fixes focus state on border utility and updates docs.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3590,7 +3590,9 @@ img {
   color: #101820;
 }
 .category-slug:hover,
-.category-slug.hover {
+.category-slug.hover,
+.category-slug:focus,
+.category-slug.focus {
   border-bottom-width: 1px !important;
 }
 /* topdoc
@@ -3857,7 +3859,9 @@ img {
   color: #43484e;
 }
 .horizontal-list__share .horizontal-list_item a:hover,
-.horizontal-list__share .horizontal-list_item a.hover {
+.horizontal-list__share .horizontal-list_item a.hover,
+.horizontal-list__share .horizontal-list_item a:focus,
+.horizontal-list__share .horizontal-list_item a.focus {
   border-bottom-width: 1px !important;
 }
 /* topdoc
