--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -159,7 +159,9 @@
     border-bottom-width: 0 !important;
 
     &:hover,
-    &.hover {
+    &.hover,
+    &:focus,
+    &.focus {
         border-bottom-width: 1px !important;
     }
 }
