--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -76,36 +76,36 @@
     - codenotes:
         - .u-link__colors();
       notes:
-        - "Pass this mixin no arguments and it will color your link states with
-          the following defaults: :link (default state) pacific, :hover/:focus
+        - "Pass this mixin no arguments to color your link states with the
+          following defaults: :link (default state) pacific, :hover/:focus
           pacific-50, :visited teal, :active navy."
     - codenotes:
         - .u-link__colors(@c);
       notes:
-        - "Pass this mixin one color it will be used on all of the following
+        - "Pass this mixin one color to be used on all of the following
           states of your link; :link (default state), :visited, :hover/:focus,
           :active."
         - ":hover and :focus share the same colors throughout this mixin."
     - codenotes:
         - .u-link__colors(@c, @h);
       notes:
-        - "Pass this mixin two colors it will use the first color for the :link
-          and :visited states, and the second color for the :hover/:focus and
+        - "Pass this mixin two colors to use the first color for the :link and
+          :visited states, and the second color for the :hover/:focus and
           :active states."
     - codenotes:
         - .u-link__colors(@c, @h, @v, @a);
       notes:
         - "Pass this mixin four colors to color :link, :hover/:focus, :visited,
           :active states respectively."
-        - "Note that this is basically the same as using the .u-link() mixin
-          except that it allows you to stick with the same mixin naming
-          convention for consistency."
+        - "Note that this is basically the same as using the
+          .u-link__colors-base() mixin except that it allows you to stick with
+          the same mixin naming convention for consistency."
     - codenotes:
-        - .u-link(@c, @h, @v, @a);
+        - .u-link__colors-base(@c, @h, @v, @a);
       notes:
         - "This is the base mixin that all .u-link__colors() mixins use. Please
           refrain from using this mixin directly in order to promote a
-          consistent use of mixin names fro coloring links throughout this
+          consistent use of mixin names for coloring links throughout this
           project. Remember that if you need to set colors for all states of a
           link you should use .u-link__colors(@c, @h, @v, @a)."
         - "Remember that :hover and :focus share the same colors."
@@ -122,24 +122,78 @@
       notes:
         - "Turn off the default bottom border on the :link state and force a
           bottom border on the :hover state."
+    - codenotes:
+        - .u-link-child__hover();
+      notes:
+        - "When a link has child elements you may want only certain children to
+          change color when the parent link is hovered.
+          Pass no arguments to this mixin to color the child element pacific
+          when the parent link is hovered."
+    - codenotes:
+        - .u-link-child__hover(@c);
+      notes:
+        - "Pass this mixin one color to color the child element when the parent
+          link is hovered."
   tags:
     - cfgov-utilities
 */
 
 .u-link__colors() {
-    .u-link(@pacific, @pacific-50, @teal, @navy);
+    .u-link__colors-base(@pacific, @pacific-50, @teal, @navy);
 }
 
 .u-link__colors(@c) {
-    .u-link(@c, @c, @c, @c);
+    .u-link__colors-base(@c, @c, @c, @c);
 }
 
 .u-link__colors(@c, @h) {
-    .u-link(@c, @h, @c, @h);
+    .u-link__colors-base(@c, @h, @c, @h);
 }
 
 .u-link__colors(@c, @h, @v, @a) {
-    .u-link(@c, @h, @v, @a);
+    .u-link__colors-base(@c, @h, @v, @a);
+}
+
+.u-link__colors-base(@c, @h, @v, @a) {
+    color: @c;
+    border-bottom-color: @c;
+
+    &:visited,
+    &.visited {
+        color: @v;
+    }
+
+    &:hover,
+    &.hover,
+    &:focus,
+    &.focus {
+        border-bottom-color: @h;
+        color: @h;
+    }
+
+    &:active,
+    &.active {
+        border-bottom-color: @a;
+        color: @a;
+    }
+}
+
+.u-link-child__hover() {
+    a:hover &,
+    a.hover &,
+    a:focus &,
+    a.focus & {
+        color: @pacific-50;
+    }
+}
+
+.u-link-child__hover(@c) {
+    a:hover &,
+    a.hover &,
+    a:focus &,
+    a.focus & {
+        color: @c;
+    }
 }
 
 .u-link__border() {
@@ -163,30 +217,6 @@
     &:focus,
     &.focus {
         border-bottom-width: 1px !important;
-    }
-}
-
-.u-link(@c, @h, @v, @a) {
-    color: @c;
-    border-bottom-color: @c;
-
-    &:visited,
-    &.visited {
-        color: @v;
-    }
-
-    &:hover,
-    &.hover,
-    &:focus,
-    &.focus {
-        border-bottom-color: @h;
-        color: @h;
-    }
-
-    &:active,
-    &.active {
-        border-bottom-color: @a;
-        color: @a;
     }
 }
 
