Updates media block to be display block, updates post-preview example with thumbnail.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3487,6 +3487,9 @@ img {
   tags:
     - cfgov-media-object
 */
+.media-object {
+  display: block;
+}
 @media only all and (min-width: 37.5em) {
   .media-object {
     position: relative;
