--- a/static/css/media-object.less
+++ b/static/css/media-object.less
@@ -40,6 +40,8 @@
     // The width and height of the image for medium screens and up.
     @img-size: 155px;
 
+    display: block;
+
     @media @respond-to-m-min {
         position: relative;
         min-height: unit((@img-size + 4px) / @base-font-size-px, em);
