Changes active state in mixin.

--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -147,7 +147,7 @@
 }
 
 .u-link__colors(@c, @h) {
-    .u-link__colors-base(@c, @h, @c, @h);
+    .u-link__colors-base(@c, @h, @c, @c);
 }
 
 .u-link__colors(@c, @h, @v, @a) {
