Updates cat slug hover color.

--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -42,7 +42,7 @@
 
 .category-slug {
     .h4();
-    .u-link__colors(@black);
+    .u-link__colors(@black, @pacific-50);
     .u-link__hover-border();
 }
 
