--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3596,8 +3596,8 @@ img {
 .category-slug.hover,
 .category-slug:focus,
 .category-slug.focus {
-  border-bottom-color: #101820;
-  color: #101820;
+  border-bottom-color: #7fb8e6;
+  color: #7fb8e6;
 }
 .category-slug:active,
 .category-slug.active {
