Make .summary block by default.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3583,7 +3583,6 @@ img {
   line-height: 1.22222222;
   color: #101820;
   border-bottom-color: #101820;
-  border-bottom-width: 0 !important;
 }
 .lt-ie9 .category-slug {
   font-weight: normal !important;
@@ -3603,12 +3602,6 @@ img {
 .category-slug.active {
   border-bottom-color: #101820;
   color: #101820;
-}
-.category-slug:hover,
-.category-slug.hover,
-.category-slug:focus,
-.category-slug.focus {
-  border-bottom-width: 1px !important;
 }
 /* topdoc
   name: Header slug
@@ -4181,6 +4174,9 @@ img {
   tags:
     - cfgov-summary
 */
+.summary {
+  display: block;
+}
 .summary_header {
   color: #101820;
   margin-top: 0;
