--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4055,7 +4055,6 @@ img {
   line-height: 1.22222222;
   color: #101820;
   border-bottom-color: #101820;
-  border-bottom-width: 0 !important;
 }
 
 .lt-ie9 .category-slug {
@@ -4079,13 +4078,6 @@ img {
 .category-slug.active {
   border-bottom-color: #101820;
   color: #101820;
-}
-
-.category-slug:hover,
-.category-slug.hover,
-.category-slug:focus,
-.category-slug.focus {
-  border-bottom-width: 1px !important;
 }
 
 /* topdoc
@@ -4697,6 +4689,10 @@ img {
   tags:
     - cfgov-summary
 */
+
+.summary {
+  display: block;
+}
 
 .summary_header {
   color: #101820;
