Consoilidates the u-link-child__hover mixin.

--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -178,16 +178,7 @@
     }
 }
 
-.u-link-child__hover() {
-    a:hover &,
-    a.hover &,
-    a:focus &,
-    a.focus & {
-        color: @pacific-50;
-    }
-}
-
-.u-link-child__hover(@c) {
+.u-link-child__hover(@c: @pacific-50) {
     a:hover &,
     a.hover &,
     a:focus &,
