Updates link color mixin.

--- a/static/css/summary.less
+++ b/static/css/summary.less
@@ -39,7 +39,7 @@
         @media @respond-to-m-min {
             .h2();
         }
-        .u-link-child__hover();
+        .u-link-child__hover(@pacific-80);
     }
 
     &_text {
