--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3592,11 +3592,14 @@ img {
   color: #101820;
 }
 .category-slug:hover,
-.category-slug.hover,
+.category-slug.hover {
+  border-bottom-color: #328ed8;
+  color: #328ed8;
+}
 .category-slug:focus,
 .category-slug.focus {
-  border-bottom-color: #7fb8e6;
-  color: #7fb8e6;
+  border-bottom-color: #328ed8;
+  color: #328ed8;
 }
 .category-slug:active,
 .category-slug.active {
@@ -3855,7 +3858,10 @@ img {
   color: #43484e;
 }
 .horizontal-list__share .horizontal-list_item a:hover,
-.horizontal-list__share .horizontal-list_item a.hover,
+.horizontal-list__share .horizontal-list_item a.hover {
+  border-bottom-color: #43484e;
+  color: #43484e;
+}
 .horizontal-list__share .horizontal-list_item a:focus,
 .horizontal-list__share .horizontal-list_item a.focus {
   border-bottom-color: #43484e;
@@ -4202,7 +4208,7 @@ a:hover .summary_header,
 a.hover .summary_header,
 a:focus .summary_header,
 a.focus .summary_header {
-  color: #7fb8e6;
+  color: #328ed8;
 }
 .summary_text {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
