--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4067,11 +4067,15 @@ img {
 }
 
 .category-slug:hover,
-.category-slug.hover,
+.category-slug.hover {
+  border-bottom-color: #328ed8;
+  color: #328ed8;
+}
+
 .category-slug:focus,
 .category-slug.focus {
-  border-bottom-color: #7fb8e6;
-  color: #7fb8e6;
+  border-bottom-color: #328ed8;
+  color: #328ed8;
 }
 
 .category-slug:active,
@@ -4353,7 +4357,11 @@ img {
 }
 
 .horizontal-list__share .horizontal-list_item a:hover,
-.horizontal-list__share .horizontal-list_item a.hover,
+.horizontal-list__share .horizontal-list_item a.hover {
+  border-bottom-color: #43484e;
+  color: #43484e;
+}
+
 .horizontal-list__share .horizontal-list_item a:focus,
 .horizontal-list__share .horizontal-list_item a.focus {
   border-bottom-color: #43484e;
@@ -4719,7 +4727,7 @@ a:hover .summary_header,
 a.hover .summary_header,
 a:focus .summary_header,
 a.focus .summary_header {
-  color: #7fb8e6;
+  color: #328ed8;
 }
 
 .summary_text {
