--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -142,8 +142,8 @@
         line-height: 1;
 
         a {
-            .u-link__colors(@darkgray);
-            .u-link__hover-border();
+            .u-link__colors(@darkgray, @pacific-80);
+            .u-link__no-border();
         }
     }
 }
