Update Sheer demo teplates

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,7 +22,7 @@
     ==================
 -->
 
-    <title>{% block title %}Blog landing page{% endblock title %} - cfgov-refresh demo</title>
+    <title>{% block title %}MISSING TITLE{% endblock title %} - cfgov-refresh demo</title>
     <meta name="description" content="Blog landing page prototyping for the consumerfinance.gov refresh">
 
     <!-- Explicit favicon link needed for testing. Remove for production. -->
@@ -64,7 +64,7 @@
 <body>
 
     <div class="demo-banner">
-        cfgov-refresh demo: <b>{% block title2 %}MISSING TITLE{% endblock title2 %}</b>
+        cfgov-refresh demo: <b>{% block demo_title %}MISSING DEMO TITLE{% endblock demo_title %}</b>
         <a class="demo-banner_back-link" href="../index.html">
             <i class="cf-icon cf-icon-left"></i> Back to demo home
         </a>
