--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4967,6 +4967,12 @@ img {
   color: #43484e;
 }
 
+.post_pull-quote {
+  float: right;
+  width: 15.625em;
+  margin-left: 30px;
+}
+
 /* topdoc
   name: EOF
   eof: true
