--- a/static/css/post.less
+++ b/static/css/post.less
@@ -159,6 +159,14 @@
     color: @darkgray;
 }
 
+.post_pull-quote {
+    .u-respond-to-min(769px, {
+        .u-right();
+        width: unit(250px / @base-font-size-px, em);
+        margin-left: @gutter-width;
+    });
+}
+
 
 /* topdoc
   name: EOF
